# Automation-Booking-System

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  HISTORY_REWRITE.md  README.md  booking.py  bot.py  captcha_handler.py  config_manager.py  data_checker.py  decision_engine.py  env.example  local_test.py  login.py  main.py  pyproject.toml  requirements.txt  telegram_notify.py  test_local.py
.github/workflows/: check_data.yml  ci.yml  deploy_worker.yml  tests.yml
.wrangler/cache/: wrangler-account.json
cloudflare_trigger/: worker.js  wrangler.toml
cloudflare_trigger/.wrangler/cache/: cf.json
cloudflare_trigger/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
dev_tools/: local_test_script.py
repo-mirror.git/: config  packed-refs
repo-mirror.git/filter-repo/: commit-map  ref-map  suboptimal-issues
repo-mirror.git/info/: refs
repo-mirror.git/objects/info/: packs
repo-mirror.git/objects/pack/: pack-ea137d85b7d3ac3ac17fdc3987d29e8639945a7d.bitmap  pack-ea137d85b7d3ac3ac17fdc3987d29e8639945a7d.idx  pack-ea137d85b7d3ac3ac17fdc3987d29e8639945a7d.pack  pack-ea137d85b7d3ac3ac17fdc3987d29e8639945a7d.rev
scheduler_bot/: bot.py  requirements_bot.txt
src/sim24_bot/: __init__.py  booking.py  captcha_handler.py  login.py
tests/: conftest.py  test_booking.py  test_captcha_handler.py  test_config_manager.py  test_data_checker.py  test_decision_engine.py  test_live_workflow.py  test_login.py  test_main_alerts.py  test_main_workflow.py  test_scheduler_bot.py  test_telegram_notify.py
