[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim24-telegram-bot"
version = "0.1.0"
description = "Automates sim24 data checks and 2GB booking with Telegram notifications"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Project Maintainers" }]
dependencies = [
  "playwright==1.44.0",
  "aiohttp==3.14.1",
  "requests==2.32.3",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "live: exercises real external services such as Telegram and sim24",
  "destructive: may trigger a real booking and should only run with explicit opt-in",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", ".venv", "repo-mirror.git"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
